jline使用源码,有些地方需要改动